[project]
name = "monome"
version = "0.1.0"
description = "A python extension which wraps libmonome."
readme = "README.md"
authors = [
    { name = "William Light", email = "wrl@illest.net" },
    { name = "Nedko Arnaudov", email = "snedko@arnaudov.name" },
]
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["scikit-build-core", "cython", "cython-cmake"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
# A list of args to pass to CMake when configuring the project.
cmake.args = ["-DBUILD_PYTHON_EXTENSION=ON"]

