[project]
name = "monome"
version = "0.1.0"
description = "A python extension which wraps libmonome."
readme = { file = "README", content-type = "text/plain" }
authors = [
    { name = "William Light", email = "wrl@illest.net" },
    { name = "Nedko Arnaudov", email = "snedko@arnaudov.name" },
]
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["scikit-build-core", "cython", "cython-cmake"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.args = ["-DBUILD_PYTHON_EXTENSION=ON"]

